--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Vite env - set backend URL
-VITE_API_URL=http://localhost:5000
+VITE_API_URL=http://localhost:5000/
 
 VITE_FIREBASE_API_KEY=AIzaSyAh6iHmI9trd5gvn3aw9Z2t7XVulHn_w_w
 VITE_FIREBASE_AUTH_DOMAIN=ymsdb-d7276.firebaseapp.com
