--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "sonner": "^2.0.7",
+    "sweetalert2": "^11.23.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
