--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # Vite env - set backend URL
-VITE_API_URL=http://localhost:5000/
+VITE_API_URL= https://yms-backend-a2x4.onrender.com
+
+
 
 VITE_FIREBASE_API_KEY=AIzaSyAh6iHmI9trd5gvn3aw9Z2t7XVulHn_w_w
 VITE_FIREBASE_AUTH_DOMAIN=ymsdb-d7276.firebaseapp.com
@@ -9,3 +11,4 @@ VITE_FIREBASE_STORAGE_BUCKET=ymsdb-d7276.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=930234036368
 VITE_FIREBASE_APP_ID=1:930234036368:web:1421659ea8fccba496a815
 VITE_FIREBASE_MEASUREMENT_ID=G-Z7GG7STQSB
+ 
