--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 # Vite env - set backend URL
-VITE_API_URL= https://yms-backend-a2x4.onrender.com
+# VITE_API_URL= https://yms-backend-a2x4.onrender.com
+VITE_API_URL= http://localhost:5000
 
 
-
+# Firebase config
 VITE_FIREBASE_API_KEY=AIzaSyAh6iHmI9trd5gvn3aw9Z2t7XVulHn_w_w
 VITE_FIREBASE_AUTH_DOMAIN=ymsdb-d7276.firebaseapp.com
 VITE_FIREBASE_DATABASE_URL=https://ymsdb-d7276-default-rtdb.firebaseio.com
